--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -2,10 +2,11 @@
     padding: 0;
     margin: auto;
     display: block;
-    z-index: -1;
+    z-index: -10;
 }
 html{
   background-color: black;
+  z-index: 1;
 }
 .myVideo{
   display: flex;
@@ -18,7 +19,7 @@ html{
 }
 .players {
   color: white;
-  font-size: 2rem;
+  font-size: 2.5rem;
   position: absolute;
   font-weight: bolder;
   padding-left: 25%;
@@ -41,4 +42,12 @@ html{
     font-size: 1.8rem;
     background-color: gray;
     color: white;
+}
+.backgroundvideo{
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+
 }
