--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,8 +1,9 @@
 #myCanvas {
-    padding: 0;
-    margin: auto;
-    display: block;
-    z-index: -10;
+  padding: 0;
+  margin: auto;
+  display: block;
+  z-index: -10;
+  margin-top: 10%;
 }
 html{
   background-color: black;
@@ -12,17 +13,20 @@ html{
   display: flex;
   justify-content: center;
   top: 0;
-  width: 65%;
+  width: 64%;
+  height: 100%;
   position: absolute;
-  padding-left: 17%;
-  padding-top:6%;
+  left: 16%;
+  
 }
 .players {
   color: white;
   font-size: 2.5rem;
   position: absolute;
   font-weight: bolder;
-  padding-left: 25%;
+  left: 20%;
+  position: absolute;
+  top: 12%;
 }
 #one{
   top: 20%;
@@ -33,21 +37,15 @@ html{
 #three {
   top:60%;
 }
-.readyButton{
-    margin-left: 26%;
-    position: absolute;
-    top: 80%;
-    width: 15%;
-    border-radius: 5px;
-    font-size: 1.8rem;
-    background-color: gray;
-    color: white;
-}
 .backgroundvideo{
   top: 0;
+  right:0;
   width: 100%;
   height: 100%;
   position: absolute;
   z-index: -1;
-
+}
+.Container {
+  width:640px;
+  height: 640px;
 }
