--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,9 +1,7 @@
 #myCanvas {
   padding: 0;
-  margin: auto;
+  margin: 0 auto;
   display: block;
-  z-index: -10;
-  margin-top: 10%;
 }
 html{
   background-color: black;
@@ -48,4 +46,12 @@ html{
 .Container {
   width:640px;
   height: 640px;
+}
+#myVideoBackground {
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
 }
