--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -7,6 +7,9 @@ html{
   background-color: black;
   z-index: 1;
 }
+.gameContainer{
+  display: flex;
+}
 .myVideo{
   display: flex;
   justify-content: center;
@@ -54,4 +57,36 @@ html{
     height: 100%;
     position: absolute;
     z-index: -1;
+}
+/* UI Progress Bar*/
+#grad1 {
+  width: 50px;
+  height: 400px;
+  border: 4px solid black;
+  transform: rotate(180deg);
+  margin-left: 26%;
+  margin-right: -25%;
+  margin-top: 15%;
+}
+
+#bar {
+  width: 50px;
+  height: 0px;
+  background-color:green;
+}
+
+#status {
+  margin-left: -4px;
+	padding-left:2px;
+	font-size: 19px;
+	font-weight: bold;
+	transform: rotate(180deg);
+	width: 50px;
+}
+
+button{
+    font-size:30px;
+    margin-left:500px;
+    color:lightblue;
+    background:grey;
 }
