--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -87,3 +87,9 @@ button{
     color:lightblue;
     background:grey;
 }
+.Headerinn {
+  font-size: 2.5rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+}
