--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -53,7 +53,6 @@ html{
     top: 0;
     right: 0;
     width: 100%;
-    height: 100%;
     position: absolute;
     z-index: -1;
 }
@@ -87,9 +86,14 @@ button{
     color:lightblue;
     background:grey;
 }
+/*For the title on the top*/
 .Headerinn {
   font-size: 2.5rem;
   font-weight: bold;
   display: flex;
   justify-content: center;
+}
+/*Side Bar container*/
+.sideBar {
+  margin-top: 15%;
 }
