--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -112,3 +112,9 @@ button{
     padding-top: 1%;
     padding-bottom: 1%;
 }
+/*GameRules*/
+.gameRules{
+  font-size: 1.4rem;
+  color: red;
+  font-weight: bolder;
+}
