--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -97,3 +97,19 @@ button{
 .sideBar {
   margin-top: 5%;
 }
+.winnerNote{
+  position: absolute;
+  font-size: 2.4rem;
+  background-color: grey;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  margin-top: 9%;
+  margin-left: 34%;
+  top: 10%;
+}
+.gameRules {
+  font-size: 1.5rem;
+  color: red;
+  font-weight: bold;
+  margin-top: -5%;
+}
