--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -96,6 +96,8 @@ button{
 /*Side Bar container*/
 .sideBar {
   margin-top: 5%;
+  display: flex;
+  flex-direction: column;
 }
 .winnerNote{
   position: absolute;
@@ -112,4 +114,10 @@ button{
   color: red;
   font-weight: bold;
   margin-top: -5%;
+}
+.sideNotes {
+  background-color: wheat;
+    border: 3px solid black;
+    border-radius: 6px;
+    width: 20%;
 }
