--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -116,7 +116,7 @@ button{
   margin-top: -5%;
 }
 .sideNotes {
-  background-color: wheat;
+  background-color: whitesmoke;
     border: 3px solid black;
     border-radius: 6px;
     width: 20%;
