--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -117,7 +117,9 @@ button{
 }
 .sideNotes {
   background-color: whitesmoke;
-    border: 3px solid black;
-    border-radius: 6px;
-    width: 20%;
+  border: 3px solid black;
+  border-radius: 6px;
+  width: 20%;
+  position: absolute;
+  right: 5%;
 }
