--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -108,6 +108,8 @@ button{
   margin-top: 9%;
   margin-left: 24%;
   top: 10%;
+  background-color: teal;
+  color: white;
 }
 .gameRules {
   font-size: 1.5rem;
